--- a/web/themes/ipu/templates/page/page--search.html.twig
+++ b/web/themes/ipu/templates/page/page--search.html.twig
@@ -26,7 +26,14 @@
           {% block branding %}
             {% if page.navbar_branding %}
               <div class="text-left">
-                <a href="/"><img class="logo" src="{{ base_path ~ directory }}/assets/img/IPU-logo.svg" /></a>
+                {%  if language_id == 'en' %}
+                  {% set logo = 'IPU-logo-130-EN.png' %}
+                  {% set url = '' %}
+                {% else %}
+                  {% set logo = 'IPU-logo-130-FR.png' %}
+                  {% set url = language_id %}
+                {% endif %}
+                <a href="/{{ url }}"><img class="logo" src="{{ base_path ~ directory ~ '/assets/img/' ~ logo }}" /></a>
                 {# page.navbar_branding #}
               </div>
             {% endif %}
