Deeplinking for tabs on events pages

--- a/web/themes/ipu/templates/views/views-view-unformatted--event-sub-pages--sub-page-content-eva-2.html.twig
+++ b/web/themes/ipu/templates/views/views-view-unformatted--event-sub-pages--sub-page-content-eva-2.html.twig
@@ -18,7 +18,7 @@
  */
 #}
 {% for row in rows %}
-  <div id="event-sub-page-{{ row.id }}" role="tabpanel" class="tab-pane fade">
+  <div id="event-sub-page-{{ row.id }}" role="tabpanel" class="tab-pane tab-content fade">
     {{ row.content }}
   </div>
 {% endfor %}
