--- a/web/themes/ipu/src/sass/ipu.style.scss
+++ b/web/themes/ipu/src/sass/ipu.style.scss
@@ -88,6 +88,7 @@ $spacers: map-merge(
 @import "content/node.page";
 @import "content/node.article";
 @import "base/forms";
+@import "sitesearch";
 
 /* Add 5 card layouts */
 .col-xs-5ths,
