--- a/web/themes/ipu/templates/views/views-view--search--page-1.html.twig
+++ b/web/themes/ipu/templates/views/views-view--search--page-1.html.twig
@@ -40,6 +40,7 @@
     'view',
     'view-' ~ id|clean_class,
     'view-id-' ~ id,
+    'container',
     'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
 ]
@@ -49,25 +50,40 @@
     {{ title_prefix }}
     {{ title }}
     {{ title_suffix }}
-
-    {% if header %}
-        <header>
-            {{ header }}
-        </header>
-    {% endif %}
-
     {{ exposed }}
     {{ attachment_before }}
+    <div class="row">
+        <div class="col-md-8">
 
-    {% if rows -%}
-        {{ rows }}
-    {% elseif empty -%}
-        {{ empty }}
-    {% endif %}
-    {{ pager }}
+            {% if header %}
+                <header>
+                    {{ header }}
+                </header>
+            {% endif %}
 
-    {{ attachment_after }}
-    {{ more }}
+            {% if rows -%}
+                {{ rows }}
+            {% elseif empty -%}
+                {{ empty }}
+            {% endif %}
+            {{ pager }}
+
+            {{ attachment_after }}
+            {{ more }}
+        </div>
+        <div class="col-md-4">
+            <div class="search-facets">
+                {% for facet in facets %}
+                    {% if facet['content'] is not empty %}
+                    <div class="search-facet search-facet-{{ facet['class']|clean_class }}"><h3>{{ facet['title'] }}</h3>
+                    {{ facet['content'] }}
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 
     {% if footer %}
         <footer>
