--- a/web/themes/ipu/templates/page/page--search.html.twig
+++ b/web/themes/ipu/templates/page/page--search.html.twig
@@ -103,6 +103,11 @@
         <div class="d-flex justify-content-md-between align-items-md-center">
           {{ page.footer }}
         </div>
+        {% set terms = link('Terms of use'|t, 'internal:/node/375')|render %}
+        {% set privacy = link('Privacy statement'|t, 'internal:/node/9571')|render %}
+        {% set year = "now"|date("Y") %}
+        {% set copyright = 'Copyright IPU'|t %}
+        <p>© {{ copyright }} {{ year }}, {{ terms }}&nbsp;&amp;amp; {{ privacy }}</a></p>
       </div>
     </footer>
   {% endif %}
