Reworking of mobile menu. Updates to page template, css, js, new blocks.

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -22201,6 +22201,12 @@ a {
   }
 }
 
+@media (max-width: 767.98px) {
+  #branding .block--newslettersubscription {
+    display: none;
+  }
+}
+
 .block--languageswitchercontent {
   margin-left: 20px;
 }
@@ -27385,21 +27391,6 @@ a.more-data-parline, .article__node-link a,
   margin-right: 4px;
 }
 
-.off-canvas {
-  display: none;
-}
-
-@media (max-width: 767.98px) {
-  .topbar .block--followus {
-    display: none;
-  }
-
-  .off-canvas {
-    display: block;
-    background-color: #e98300;
-    color: #ffffff;
-  }
-}
 #main-nav {
   background-color: #fff;
   border-width: 1px 0 4px 0;
@@ -27881,6 +27872,86 @@ ol.breadcrumb {
 
 /* Events flyout */
 /* Resources flyout */
+@media (max-width: 991.98px) {
+  .topbar .block--followus {
+    display: none;
+  }
+
+  .branding-right .block--newslettersubscription {
+    display: none;
+  }
+}
+.off-canvas, .mobile-menu-toggle {
+  display: none;
+}
+
+@media (max-width: 1199.98px) {
+  .mobile-menu-toggle {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3000;
+  }
+
+  #main-nav {
+    display: none;
+  }
+}
+.mobile-menu-toggle span {
+  visibility: hidden;
+}
+.mobile-menu-toggle a {
+  color: #ffffff;
+}
+.mobile-menu-toggle a:hover, .mobile-menu-toggle a.active {
+  color: #e98300;
+}
+.mobile-menu-toggle a.active:hover {
+  color: #ffffff;
+}
+.mobile-menu-toggle a:after {
+  content: "\2261";
+  font-size: 2em;
+  position: absolute;
+  right: 0.5rem;
+  top: 0.9rem;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  speak: none;
+}
+
+.off-canvas {
+  width: 100%;
+  position: absolute;
+  z-index: 2999;
+  top: 0;
+  left: 0;
+  margin-top: 2rem;
+}
+.off-canvas .mobile-menu-wrapper {
+  height: 10000px !important;
+  background-color: #ffffff;
+  opacity: 0.95;
+  padding: 50px 20px;
+}
+.off-canvas .mobile-menu-wrapper ul, .off-canvas .mobile-menu-wrapper li, .off-canvas .mobile-menu-wrapper a {
+  display: block;
+  background-color: #ffffff;
+}
+.off-canvas .mobile-menu-wrapper a {
+  font-weight: 300;
+  padding: 2px 6px;
+}
+.off-canvas .mobile-menu-wrapper li.menu-item-level-0.menu-item--expanded > a {
+  background-color: rgba(0, 168, 180, 0.3);
+  font-weight: 400;
+  border-bottom: 1px solid #ffffff;
+}
+.off-canvas .mobile-menu-wrapper li.menu-item-level-0.menu-item--expanded > a i {
+  margin-left: 4px;
+}
+
 form input[type=text], form input[type=search], form select {
   padding: 0.125rem 0.5rem !important;
 }
