--- a/web/themes/ipu/templates/page/page.html.twig
+++ b/web/themes/ipu/templates/page/page.html.twig
@@ -13,13 +13,19 @@
           <div class="topbar-left text-left">{{ page.topbar_left }}</div>
       {% endif %}
       {% if page.topbar_right %}
-      <div class="topbar-right text-right">{{ page.topbar_right }}</div>
+      <div class="topbar-right text-right">{{ page.topbar_right }}
+          <div class="mobile-menu-toggle">
+              <a href="#">
+                  <span>{{ 'Menu'|t }}</span>
+              </a>
+          </div>
+      </div>
       {% endif %}
       {% endblock %}
     </div>
   </div>
 
-  <div id="#top">
+  <div id="top">
     <div id="branding">
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
@@ -113,11 +119,6 @@
   {% endif %}
 
     {% if page.off_canvas %}
-          <div class="mobile-menu-toggle">
-            <a href="#">
-              <span>{{ 'Menu'|t }}</span>
-            </a>
-          </div>
         <div class="off-canvas">
           <div id="mobilemenu" class="mobile-menu-wrapper">
             {{ page.off_canvas }}
