Updates parliament pages and map.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-8">
            {% if content.news_and_stories|length %}
-            <h2>{{ 'News from'|t }} {{ content.title }}</h2>
+            <h2>{{ 'Related news'|t }} {{ content.title }}</h2>
                 {{ content.news_and_stories }}
             {% endif %}
             {% if content.case_studies|length %}
@@ -22,15 +22,12 @@
                 {{ content.case_studies }}
             {% endif %}
             {% if content.events|length %}
-                <h2>{{ 'Events in'|t }} {{ content.title }}</h2>
+                <h2>{{ 'Related events'|t }} {{ content.title }}</h2>
                 {{ content.events }}
             {% endif %}
         </div>
     </div>
 
-</div>
-<div class="country-callout">
-    {{ content.callout }}
 </div>
 <div class="in-the-section">
     <div class="container">
