--- a/web/modules/custom/ipu_tweaks/css/ultimenu_override.css
+++ b/web/modules/custom/ipu_tweaks/css/ultimenu_override.css
@@ -6,6 +6,9 @@
   /* Force hover to stay hidden */
   .ultimenu--hover > li:hover > .ultimenu__flyout {
     visibility: hidden !important;
+    opacity: 0;
+    max-height: 0;
+    z-index: 1000;
   }
 
   /* Force focus anywhere in li to show  */
@@ -13,5 +16,21 @@
     visibility: visible !important;
     opacity: 1;
     max-height: none;
+  }
+  .ultimenu--hover > li > .ultimenu__link:focus {
+    /*background-color: #f00;*/
+  }
+
+  /* This works until you click (so the link loses focus */
+  /*.ultimenu--hover > li > .ultimenu__link:focus ~ .ultimenu__flyout {
+    visibility: visible !important;
+    opacity: 1 !important;
+    max-height: none !important;
+  }*/
+  /* This uses the js which adds link-focus to all children */
+  .ultimenu--hover > li.focus-within > .ultimenu__link ~ .ultimenu__flyout {
+    visibility: visible !important;
+    opacity: 1 !important;
+    max-height: none !important;
   }
 }
