--- a/web/themes/ipu/src/sass/block/_block2.scss
+++ b/web/themes/ipu/src/sass/block/_block2.scss
@@ -99,3 +99,21 @@
     }
   }
 }
+ul.flickr-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  a {
+    display: block;
+    padding: 0 0 20px 0;
+  }
+  a:first-child {
+    width: 100%;
+  }
+  img {
+    width: 100%;
+  }
+}
