--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -2041,7 +2041,7 @@ a.btn {
   }
   a {
     font-size: $font-size-md;
-    color: $ipu-dark-grey;
+    color: $ipu-grey;
     font-weight: $font-weight-normal;
   }
   a:hover {
